--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
 
+.progTrack ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
 :root {
     font-family: "DM Serif Display";
     color: #fffffe;
